--- a/app/globals.css
+++ b/app/globals.css
@@ -12,13 +12,16 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: auto;
+  word-break: normal;
   height: 100%;
-  --background: #dedede;
 }
 
 body {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1000px;
+  min-height: 100%;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
