--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -9,16 +9,15 @@
 .tabListContentWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 20px 20px;
+  padding-top: 20px;
   
   .tabList {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
+    border-bottom: 1px black solid;
     list-style-type: none;
     
     li {
@@ -28,11 +27,7 @@
       border-radius: 10px 10px 0px 0px;
       background-color: gray;
       color: white;
-      margin-right: 1px;
-    }
-
-    li:last-child {
-      margin-right: 0px;
+      margin-right: 4px;
     }
 
     .activeTab {
@@ -40,11 +35,10 @@
       background: black;
     }
   }
-  
-  .tabContent {
-    width: 100%;
-    height: 100%;
-    background-color: white;
+}
 
-  }
+.content {
+  width: auto;
+  height: 100%;
+  margin: 2rem 4px 2rem 12rem;
 }
