디자인 및 컨텐츠 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   overflow-x: auto;
@@ -46,6 +50,12 @@ a {
   }
 }
 
-h1 { font-size: 1.8em; }
-h2 { font-size: 1.6em; }
-h3 { font-size: 1.4em; }
+h1 {
+  font-size: 1.8em;
+}
+h2 {
+  font-size: 1.6em;
+}
+h3 {
+  font-size: 1.4em;
+}
