--- a/app/components/Header.module.scss
+++ b/app/components/Header.module.scss
@@ -1,9 +1,3 @@
-.root {
-  display: flex;
-  list-style-type: none;
-  justify-content: flex-end;
-}
-
 .tabList {
   width: 100%;
   display: flex;
@@ -11,6 +5,10 @@
   border-bottom: 1px black solid;
   list-style-type: none;
   padding: 0;
+  padding-top: 1rem;
+  position: absolute;
+  left: 0;
+  background-color: #fff;
 
   li {
     width: fit-content;
@@ -19,7 +17,11 @@
     border-radius: 10px 10px 0px 0px;
     background-color: gray;
     color: white;
-    margin-right: 4px;
+    margin-right: 0.5rem;
+  }
+
+  a:first-child > li {
+    margin-right: 2rem;
   }
 
   .activeTab {
